--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
         .usp-item p { text-align: justify; margin-bottom: 15px; }
         .usp-item img { border-radius: var(--border-radius); box-shadow: var(--shadow); width: 100%; aspect-ratio: 1 / 1; object-fit: cover; margin: 0 auto; }
         .video-section, .review-section { background-color: var(--color-grey); }
-        .slider-container { position: relative; touch-action: pan-y; }
+        .slider-container { position: relative; touch-action: pan-y; } /* Fix scroll conflict */
+        .slider-container .tns-controls button { background: rgba(255,255,255,0.7); color: #333; border: none; border-radius: 50%; width: 40px; height: 40px; font-size: 20px; position: absolute; top: 50%; transform: translateY(-50%); z-index: 10; }
+        .slider-container .tns-controls button:first-child { left: -10px; }
+        .slider-container .tns-controls button:last-child { right: -10px; }
+        .slider-container .tns-nav { text-align: center; margin-top: 15px; }
+        .slider-container .tns-nav button { width: 10px; height: 10px; padding: 0; margin: 0 5px; border-radius: 50%; background: #ccc; border: none; }
+        .slider-container .tns-nav .tns-nav-active { background: var(--color-primary); }
         .review-slider-wrapper .tns-item { padding: 5px; }
         .review-card { background: var(--color-light); padding: 20px; border-radius: var(--border-radius); box-shadow: var(--shadow); text-align: center; height: 100%; }
         .review-card img { width: 70px; height: 70px; border-radius: 50%; margin: 0 auto 15px; object-fit: cover; }
@@ -82,6 +88,9 @@
         .modal-content { background: var(--color-light); padding: 25px; border-radius: var(--border-radius); box-shadow: 0 5px 20px rgba(0,0,0,0.2); width: 90%; max-width: 500px; max-height: 90vh; overflow-y: auto; position: relative; transform: scale(0.9); transition: transform 0.3s; }
         .modal-overlay.visible .modal-content { transform: scale(1); }
         .modal-close, .lightbox-close { position: absolute; top: 15px; right: 15px; background: #eee; border: none; border-radius: 50%; width: 30px; height: 30px; font-size: 20px; cursor: pointer; line-height: 30px; text-align: center; }
+        .lightbox-close { top: -15px; right: -15px; background: white; color: black; }
+        .lightbox-content { position: relative; width: 90%; max-width: 800px; aspect-ratio: 16 / 9; }
+        .lightbox-content video { width: 100%; height: 100%; border-radius: var(--border-radius); }
         .modal-content h2 { text-align: left; margin-bottom: 20px; }
         .form-group { margin-bottom: 15px; }
         .form-group label { display: block; margin-bottom: 5px; font-weight: bold; }
@@ -296,7 +305,7 @@
     <div class="sticky-cta-bar">
         <button class="cta-button open-form-button">MUA NGAY – Giao tận nơi</button>
     </div>
-    
+
     <div class="modal-overlay" id="order-modal">
         <div class="modal-content">
             <button class="modal-close" id="modal-close-button">&times;</button>
@@ -353,7 +362,7 @@
             navAsThumbnails: true,
             navContainer: "#gallery-thumbs-nav",
             controls: false,
-            nav: true,
+            // XÓA DÒNG nav: true bị thừa
         });
 
         mainSlider.events.on('indexChanged', (info) => {
@@ -463,7 +472,7 @@
 
             fetch(apiURL, {
                 method: 'POST',
-                mode: 'no-cors', // Dùng no-cors để "fire-and-forget"
+                mode: 'no-cors',
                 headers: { 'Content-Type': 'application/json' },
                 body: JSON.stringify(data),
             })
