--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
         .review-card img { width: 100%; aspect-ratio: 1/1; object-fit: cover; border-radius: 8px; margin-bottom: 15px; }
         .review-card .name { font-weight: bold; }
         .review-card .stars { color: #fadb14; margin: 5px 0; }
-        .video-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; }
-        @media (min-width: 768px) { .video-grid { grid-template-columns: repeat(4, 1fr); } }
+        .video-slider .carousel-cell { width: 45%; margin-right: 15px; }
+        @media (min-width: 768px) { .video-slider .carousel-cell { width: calc( (100% - 40px) / 3 ); } }
         .video-thumbnail { position: relative; cursor: pointer; overflow: hidden; border-radius: var(--border-radius); box-shadow: var(--shadow); aspect-ratio: 9 / 16; }
         .video-thumbnail img { width: 100%; height: 100%; object-fit: cover; }
         .video-thumbnail .play-icon { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 60px; height: 60px; background: rgba(255,255,255,0.8); border-radius: 50%; display: flex; align-items: center; justify-content: center; transition: transform 0.2s; }
@@ -182,11 +182,19 @@
     <section class="video-section">
         <div class="container">
             <h2>🎥 Video thực tế từ khách hàng</h2>
-            <div class="video-grid">
-                <div class="video-thumbnail" data-video-src="./assets/v4.mp4"><img src="./assets/1.png" alt="Thumbnail video 1"><div class="play-icon"><svg viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg></div></div>
-                <div class="video-thumbnail" data-video-src="./assets/v3.mp4"><img src="./assets/2.png" alt="Thumbnail video 2"><div class="play-icon"><svg viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg></div></div>
-                <div class="video-thumbnail" data-video-src="./assets/v2.mp4"><img src="./assets/3.png" alt="Thumbnail video 3"><div class="play-icon"><svg viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg></div></div>
-                <div class="video-thumbnail" data-video-src="./assets/v1.mp4"><img src="./assets/4.png" alt="Thumbnail video 4"><div class="play-icon"><svg viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg></div></div>
+            <div class="video-slider">
+                <div class="carousel-cell">
+                    <div class="video-thumbnail" data-video-src="./assets/v4.mp4"><img src="./assets/1.png" alt="Thumbnail video 1"><div class="play-icon"><svg viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg></div></div>
+                </div>
+                <div class="carousel-cell">
+                    <div class="video-thumbnail" data-video-src="./assets/v3.mp4"><img src="./assets/2.png" alt="Thumbnail video 2"><div class="play-icon"><svg viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg></div></div>
+                </div>
+                <div class="carousel-cell">
+                    <div class="video-thumbnail" data-video-src="./assets/v2.mp4"><img src="./assets/3.png" alt="Thumbnail video 3"><div class="play-icon"><svg viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg></div></div>
+                </div>
+                <div class="carousel-cell">
+                    <div class="video-thumbnail" data-video-src="./assets/v1.mp4"><img src="./assets/4.png" alt="Thumbnail video 4"><div class="play-icon"><svg viewBox="0 0 24 24"><path d="M8,5.14V19.14L19,12.14L8,5.14Z" /></svg></div></div>
+                </div>
             </div>
         </div>
     </section>
@@ -356,14 +364,29 @@
         });
         
         const reviewSlider = document.querySelector('.review-slider');
-        const flktyReview = new Flickity( reviewSlider, {
-             cellAlign: 'left',
-             contain: true,
-             groupCells: true,
-             pageDots: true,
-             prevNextButtons: true,
-             wrapAround: true
-        });
+        if (reviewSlider) {
+            const flktyReview = new Flickity( reviewSlider, {
+                 cellAlign: 'left',
+                 contain: true,
+                 groupCells: true,
+                 pageDots: true,
+                 prevNextButtons: true,
+                 wrapAround: true
+            });
+        }
+        
+        const videoSlider = document.querySelector('.video-slider');
+        if (videoSlider) {
+            const flktyVideo = new Flickity( videoSlider, {
+                 cellAlign: 'left',
+                 contain: true,
+                 groupCells: true,
+                 pageDots: true,
+                 prevNextButtons: true,
+                 wrapAround: true
+            });
+        }
+
 
         const videoThumbnails = document.querySelectorAll('.video-thumbnail');
         const lightbox = document.getElementById('video-lightbox');
