--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
      <div class="lightbox-overlay" id="video-lightbox">
         <div class="lightbox-content">
-            <video src="" controls autoplay></video>
+            <video src="" controls autoplay muted playsinline></video>
             <button class="lightbox-close">&times;</button>
         </div>
     </div>
