--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         .faq-item.active .faq-question::after { transform: rotate(45deg); }
         .faq-answer { max-height: 0; overflow: hidden; transition: max-height 0.4s ease-out; padding-left: 30px; }
         .modal-overlay, .lightbox-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; display: none; align-items: center; justify-content: center; opacity: 0; transition: opacity 0.3s; }
-        .modal-overlay.visible, .lightbox-overlay.visible { opacity: 1; }
+        .modal-overlay.visible, .lightbox-overlay.visible { display: flex; opacity: 1; }
         .modal-content { background: var(--color-light); padding: 25px; border-radius: var(--border-radius); box-shadow: 0 5px 20px rgba(0,0,0,0.2); width: 90%; max-width: 500px; max-height: 90vh; overflow-y: auto; position: relative; transform: scale(0.9); transition: transform 0.3s; }
         .lightbox-content { position: relative; width: 90%; max-width: 800px; aspect-ratio: 16 / 9; transform: scale(0.9); transition: transform 0.3s; }
         .modal-overlay.visible .modal-content, .lightbox-overlay.visible .lightbox-content { transform: scale(1); }
@@ -471,7 +471,7 @@
 
         function closeModal() {
             modal.classList.remove('visible');
-            setTimeout(() => { modal.style.display = 'none'; }, 300);
+             setTimeout(() => { modal.style.display = 'none'; }, 300);
         }
         closeButton.addEventListener('click', closeModal);
         modal.addEventListener('click', (e) => {
