--- a/index.html
+++ b/index.html
@@ -403,20 +403,17 @@
                 lightboxVideo.src = videoSrc;
                 lightbox.style.display = 'flex';
                 setTimeout(() => lightbox.classList.add('visible'), 10);
-                const playPromise = lightboxVideo.play();
-                if (playPromise !== undefined) {
-                    playPromise.catch(error => {
-                        console.log("Video autoplay was prevented. User needs to press play.", error);
-                    });
-                }
+                // ĐÃ XÓA LỆNH TỰ ĐỘNG PLAY GÂY LỖI TRÊN MOBILE
             });
         });
 
         function closeLightbox() {
             lightbox.classList.remove('visible');
-            lightboxVideo.pause();
-            lightboxVideo.src = "";
-             setTimeout(() => { lightbox.style.display = 'none'; }, 300);
+            setTimeout(() => {
+                lightboxVideo.pause();
+                lightboxVideo.src = "";
+                lightbox.style.display = 'none';
+            }, 300);
         }
         lightboxClose.addEventListener('click', closeLightbox);
         lightbox.addEventListener('click', (e) => {
